implemented new spiders

--- a/SiteCrawler/scrapy.cfg
+++ b/SiteCrawler/scrapy.cfg
@@ -5,6 +5,8 @@
 
 [settings]
 default = SiteCrawler.settings
+# Use for degug with 'scrapy shell'
+#default = scrapy.settings
 
 [deploy]
 #url = http://localhost:6800/
